# anaconda-otel-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run-tests.sh  test_proxy.py  tox.ini
.github/workflows/: ci.yaml  create-release.yaml  pr-merge.yaml  pull-request-ut.yaml  update-sdk-version.yaml
anaconda/opentelemetry/: __version__.py  config.py  exporter_shim.py  signals.py
anaconda_opentelemetry/: __init__.py  __version__.py  attributes.py  common.py  config.py  custom_types.py  event_logger.py  exporter_shim.py  exporters.py  formatting.py  logging.py  metrics.py  oidc.py  signals.py  silent_logger.py  tokens.py  tracing.py
anaconda_opentelemetry/anon_usage/: tokens.py  utils.py
conda-recipe/: meta.yaml
docs/source/: authentication.md  best_practices.md  conf.py  getting_started.md  index.md  onboarding_examples.md  schema-versions.md  signal_type_best_practices.md
oidc_auth/: __init__.py  oidc.py
oidc_auth/docs/: authentication.md
oidc_auth/tests/: oidc_test.py
scripts/: build.sh  cleanup-build.sh  make-docs.sh  run-tests.sh
tests/: test_shutdown.py
tests/e2e_qa/: ENDPOINTS_REFERENCE.md  README.md  SETUP.md  VALIDATION_CHECKLIST.md  env.example  environment.yml  environment.yml.template  run_all_examples.py  run_initialization_examples.py  run_logging_examples.py  run_metrics_examples.py
tests/integration_tests/: test_external_prod_otel.py  test_trace_carrier.py
tests/unit_tests/: attributes_test.py  config_test.py  exporter_shim_test.py  oidc_test.py  test_exporting.py  test_external.py  test_internal.py  (+2 more)
(+57 files in other folders)
